--- a/Friday.ERP.Client/Pages/Purchase/Index.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Index.razor
@@ -40,8 +40,8 @@
     </CustomPage>
     <CustomPage Sm="12" Md="5" IsLoading="@_isMainLoading">
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Invoice" SecondText="@_invoiceNo" SecondTextAlign="Align.End"/>
-            <CustomLabelAndLabel FirstText="Date & Time" SecondText="@(DateTime.Now.ToString("d"))" SecondTextAlign="Align.End"/>
+            <CustomLabelAndLabel FirstText="ဘောင်ချာနံပါတ်" SecondText="@_invoiceNo" SecondTextAlign="Align.End"/>
+            <CustomLabelAndLabel FirstText="နေ့စွဲ" SecondText="@(DateTime.Now.ToString("d"))" SecondTextAlign="Align.End"/>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2" Justify="Justify.FlexStart" Style="overflow-y: auto;height: 100%;align-content: baseline;">
@@ -50,7 +50,7 @@
                 <MudItem sm="12">
                     <div class="d-flex d-column justify-center flex-grow-1" style="height: 40vh;">
                         <div class="align-self-center">
-                            <MudText Typo="Typo.caption">No Product In Cart!</MudText>
+                            <MudText Typo="Typo.caption">ပစ္စည်းများစျေးခြင်းထဲတွင်မရှိသေးပါ</MudText>
                         </div>
                     </div>
                 </MudItem>
@@ -71,20 +71,20 @@
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLableAndAutocomplete FirstText="Vendor" Required="true"
+            <CustomLableAndAutocomplete FirstText="စျေးရောင်းသူ" Required="true"
                                         Value="@_customerVendorName" SearchFuncWithCancel="@CustomerVendorSearch"
                                         ValueChanged="@CustomerVendorChange"
                                         OnClearButtonClick="@CustomerVendorClear"/>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Subtotal" SecondText="@($"{SubTotal} mmk")" SecondTextAlign="Align.End"/>
+            <CustomLabelAndLabel FirstText="ကျသင့်‌ငွေ" SecondText="@($"{SubTotal} ကျပ်")" SecondTextAlign="Align.End"/>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
             <MudItem sm="12" md="12" lg="12">
                 <CustomButton
-                    Label="Proceed to Purchase" IsLoading="_isLoading" OnClick="@OpenTransactionCreateDialog" Variant="Variant.Filled"/>
+                    Label="ဝယ်ရန်" IsLoading="_isLoading" OnClick="@OpenTransactionCreateDialog" Variant="Variant.Filled"/>
             </MudItem>
         </MudGrid>
     </CustomPage>
@@ -209,7 +209,7 @@
     {
         if (_productsInCartTemp.Select(c => c.ProductGuid).ToList().Contains(productViewDto.Guid))
         {
-            Snackbar.Add("Product Already In Cart!", Severity.Error);
+            Snackbar.Add("စျေးခြင်းထဲတွင်ပစ္စည်းရှိပြီးသားဖြစ်နေသည်", Severity.Error);
             return;
         }
 
@@ -224,14 +224,14 @@
         };
 
         var options = new DialogOptions();
-        var dialog = await DialogService.ShowAsync<PurchaseProductCartDialog>("Add to Cart", parameters, options);
+        var dialog = await DialogService.ShowAsync<PurchaseProductCartDialog>("စျေးခြင်းထဲထည့်ရန်", parameters, options);
         var result = await dialog.Result;
         if (!result.Canceled)
         {
             var addedProduct = (ProductPurchaseAddToCartViewDto)result.Data;
             _productsInCartTemp.Add(addedProduct);
 
-            Snackbar.Add("Product Added To Cart!", Severity.Success);
+            Snackbar.Add("စျေးခြင်းထဲထည့်ပြီးပြီ", Severity.Success);
             SubTotal = _productsInCartTemp.Select(c => c.TotalPrice).Sum();
         }
     }
@@ -252,7 +252,7 @@
         };
 
         var options = new DialogOptions();
-        var dialog = await DialogService.ShowAsync<PurchaseProductCartDialog>("Update Cart", parameters, options);
+        var dialog = await DialogService.ShowAsync<PurchaseProductCartDialog>("ပြောင်းရန်", parameters, options);
         var result = await dialog.Result;
         if (!result.Canceled)
         {
@@ -263,7 +263,7 @@
                 if (productToRemove is not null)
                     _productsInCartTemp.Remove(productToRemove);
 
-                Snackbar.Add("Product Removed From Cart!", Severity.Success);
+                Snackbar.Add("စျေးခြင်းမှဖယ်ရှားပြီးပြီ", Severity.Success);
             }
             else
             {
@@ -275,7 +275,7 @@
                     _productsInCartTemp.Add(addedProduct);
                 }
 
-                Snackbar.Add("Product Updated To Cart!", Severity.Success);
+                Snackbar.Add("စျေးခြင်းထဲ့ထည့်ပြီးပြီ", Severity.Success);
             }
 
             SubTotal = _productsInCartTemp.Select(c => c.TotalPrice).Sum();
@@ -286,13 +286,13 @@
     {
         if (_productsInCartTemp.Count == 0)
         {
-            Snackbar.Add("Add Items To Proceed To Sale!", Severity.Error);
+            Snackbar.Add("၀ယ်ရန်ပစ္စည်းထည့်ပါ", Severity.Error);
             return;
         }
 
         if (_customerVendorName is null)
         {
-            Snackbar.Add("Select Vendor To Proceed!", Severity.Error);
+            Snackbar.Add("စျေးရောင်းသူရွေးပါ", Severity.Error);
             return;
         }
 
@@ -307,7 +307,7 @@
         };
 
         var options = new DialogOptions();
-        var dialog = await DialogService.ShowAsync<PurchaseTransactionDialog>("Make Purchase", parameters, options);
+        var dialog = await DialogService.ShowAsync<PurchaseTransactionDialog>("ဝယ်ရန်", parameters, options);
         var result = await dialog.Result;
         if (!result.Canceled)
         {
@@ -347,7 +347,7 @@
 
             if (httpResult.isSuccess)
             {
-                Snackbar.Add("Purchase Completed!", Severity.Success);
+                Snackbar.Add("စျေးဝယ်ခြင်းအောင်မြင်သည်", Severity.Success);
                 NavManager.NavigateTo("/loading/purchase");
             }
         }
