--- a/Friday.ERP.Client/Pages/Inventory/Components/Templates/ProductPage.razor
+++ b/Friday.ERP.Client/Pages/Inventory/Components/Templates/ProductPage.razor
@@ -1,10 +1,10 @@
 @using Friday.ERP.Shared.DataTransferObjects
 <MudProgressLinear Color="Color.Primary" Class="mb-4" Indeterminate="@IsLoading"/>
 <MudGrid Spacing="2">
-    <MudItem sm="12" md="@(CreateButton is null ? 6 : 4)" Class="align-self-center">
+    <MudItem sm="12" md="@(CreateButton is not null ? 3 : 5)" Class="align-self-center">
         <MudText Typo="Typo.h6">ပစ္စည်းများ</MudText>
     </MudItem>
-    <MudItem sm="12" md="3" Class="align-self-center">
+    <MudItem sm="12" md="4" Class="align-self-center">
         @* Todo *@
         <MudAutocomplete T="string?"
                          Label="ပစ္စည်းအမျိုးအစား"
