--- a/Friday.ERP.Client/Pages/Sale/Dialogs/SaleTransactionDialog.razor
+++ b/Friday.ERP.Client/Pages/Sale/Dialogs/SaleTransactionDialog.razor
@@ -3,11 +3,11 @@
 <MudDialog>
     <DialogContent>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Invoice No." SecondText="@InvoiceNo"/>
-            <CustomLabelAndLabel FirstText="Customer" SecondText="@(CustomerName ?? "Walk-in")"/>
+            <CustomLabelAndLabel FirstText="ဘောင်ချာနံပါတ်" SecondText="@InvoiceNo"/>
+            <CustomLabelAndLabel FirstText="စျေးဝယ်သူ" SecondText="@(CustomerName ?? "Walk-in")"/>
             @if (CustomerName is not null)
             {
-                <CustomLabelAndLabel FirstText="Existing Credit / Debit"
+                <CustomLabelAndLabel FirstText="အကြွေး/ပိုငွေ"
                                      SecondTextColor="@(CustomerExistingCreditDebit < 0 ? Color.Error : Color.Info)"
                                      SecondText="@_customerExistingCreditDebitString"/>
             }
@@ -15,9 +15,9 @@
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Subtotal" SecondText="@($"{SubTotal.ToString()} mmk")"/>
+            <CustomLabelAndLabel FirstText="ကျသင့်‌ငွေ" SecondText="@($"{SubTotal.ToString()} mmk")"/>
             @* Todo *@
-            <CustomLabelAndInput FirstText="Discount">
+            <CustomLabelAndInput FirstText="လျော့စျေး">
                 <MudItem sm="3" md="3" lg="3" Class="align-self-center">
                     <MudSelect T="string"
                                Value="@_selectedDiscountType"
@@ -25,7 +25,7 @@
                                FullWidth="true"
                                Margin="Margin.Dense"
                                Variant="Variant.Outlined">
-                        <MudSelectItem Value="@("Flat")"/>
+                        <MudSelectItem Value="@("ကျပ်")"/>
                         <MudSelectItem Value="@("%")"/>
                     </MudSelect>
                 </MudItem>
@@ -39,32 +39,32 @@
                                   Variant="Variant.Outlined"/>
                 </MudItem>
             </CustomLabelAndInput>
-            <CustomLabelAndLongField FirstText="Delivery Fees"
+            <CustomLabelAndLongField FirstText="လုပ်သားခ"
                                      BindValue="@DeliveryFees" BindValueChanged="@(e => DiscountOrDeliveryFeesValueChanged(e, false))"/>
 
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Total" SecondText="@($"{Total.ToString()} mmk")"/>
+            <CustomLabelAndLabel FirstText="စုစုပေါင်းကျငွေ" SecondText="@($"{Total.ToString()} mmk")"/>
             @if (CustomerName is not null)
             {
-                <CustomLabelAndLabel FirstText="Total (With Existing)" SecondText="@($"{GrandTotal.ToString()} mmk")"/>
+                <CustomLabelAndLabel FirstText="ပေးရန်စုစုပေါင်း" SecondText="@($"{GrandTotal.ToString()} mmk")"/>
                 <CustomLabelAndLongField
-                    FirstText="Paid Total" BindValue="@PaidTotal" BindValueChanged="@TotalPaidValueChanged" Required="true"/>
+                    FirstText="ပေးငွေစုစုပေါင်း" BindValue="@PaidTotal" BindValueChanged="@TotalPaidValueChanged" Required="true"/>
             }
         </MudGrid>
         @if (CustomerName is not null)
         {
             <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
             <MudGrid Spacing="2">
-                <CustomLabelAndLabel FirstText="Total Credit / Debit (Overall)"
+                <CustomLabelAndLabel FirstText="လက်ကျန် အကြွေး/ပိုငွေ"
                                      SecondText="@_totalCreditDebitLeftString"
                                      SecondTextColor="@(CreditDebitLeftTransaction < 0 ? Color.Error : Color.Info)"/>
             </MudGrid>
         }
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndInput FirstText="Remark">
+            <CustomLabelAndInput FirstText="မှတ်ချက်">
                 <MudItem sm="7" md="7" lg="7" Class="align-self-center">
                     <MudTextField T="string" @bind-Value="Remark"
                                   FullWidth="true" InputType="InputType.Text"
@@ -76,9 +76,9 @@
     </DialogContent>
     <DialogActions>
         <CustomButton
-            Label="Cancel" OnClick="@Cancel" Color="Color.Default" Variant="Variant.Text" FullWidth="false"/>
+            Label="ထွက်မည်" OnClick="@Cancel" Color="Color.Default" Variant="Variant.Text" FullWidth="false"/>
         <CustomButton
-            Label="Make Purchase" OnClick="@Submit" Variant="Variant.Text" FullWidth="false"/>
+            Label="ရောင်းမည်" OnClick="@Submit" Variant="Variant.Text" FullWidth="false"/>
     </DialogActions>
 </MudDialog>
 
@@ -92,8 +92,8 @@
     [Parameter] public long SubTotal { get; set; }
 
     string? _customerExistingCreditDebitString;
-    string? _totalCreditDebitLeftString = "0 mmk";
-    string? _selectedDiscountType = "Flat";
+    string? _totalCreditDebitLeftString = "0 ကျပ်";
+    string? _selectedDiscountType = "ကျပ်";
     
     long _discount;
 
@@ -110,11 +110,11 @@
         base.OnParametersSet();
         _customerExistingCreditDebitString = CustomerExistingCreditDebit.ToString();
         if (CustomerExistingCreditDebit < 0)
-            _customerExistingCreditDebitString += " mmk (Debit)";
+            _customerExistingCreditDebitString += " ကျပ် (အကြွေး)";
         else if (CustomerExistingCreditDebit == 0)
-            _customerExistingCreditDebitString += " mmk";
+            _customerExistingCreditDebitString += " ကျပ်";
         else
-            _customerExistingCreditDebitString += " mmk (Credit)";
+            _customerExistingCreditDebitString += " ကျပ် (ပိုငွေ)";
 
         Total = SubTotal;
         GrandTotal = Total - CustomerExistingCreditDebit;
@@ -145,7 +145,7 @@
             DeliveryFees = value;
         }
 
-        if (_selectedDiscountType == "Flat")
+        if (_selectedDiscountType == "ကျပ်")
         {
             Discount = _discount;
         }
@@ -187,11 +187,11 @@
         CreditDebitLeftTransaction = longValue - GrandTotal;
         _totalCreditDebitLeftString = CreditDebitLeftTransaction.ToString();
         if (CreditDebitLeftTransaction < 0)
-            _totalCreditDebitLeftString += " mmk (Debit)";
+            _totalCreditDebitLeftString += " ကျပ် (အကြွေး)";
         else if (CreditDebitLeftTransaction == 0)
-            _totalCreditDebitLeftString += " mmk";
+            _totalCreditDebitLeftString += " ကျပ်";
         else
-            _totalCreditDebitLeftString += " mmk (Credit)";
+            _totalCreditDebitLeftString += " ကျပ် (ပိုငွေ)";
     }
 
     void Cancel()
