--- a/Friday.ERP.Client/Pages/Settings/Index.razor
+++ b/Friday.ERP.Client/Pages/Settings/Index.razor
@@ -134,7 +134,7 @@
             if (result.isSuccess)
             {
                 BindData(result.settingViewDto!);
-                Snackbar.Add("Update Successful", Severity.Success);
+                Snackbar.Add("ပြောင်းလဲခြင်းအောင်မြင်သည်။", Severity.Success);
             }
         }
 
