--- a/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseTransactionDialog.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseTransactionDialog.razor
@@ -1,5 +1,4 @@
 @using Friday.ERP.Shared.DataTransferObjects
-
 <MudDialog>
     <DialogContent>
         <MudGrid Spacing="2">
@@ -16,7 +15,8 @@
             <CustomLabelAndInput FirstText="လျော့စျေး">
                 <MudItem sm="3" md="3" lg="3" Class="align-self-center">
                     <MudSelect T="string"
-                              ValueChanged="DiscountTypeValueChanged"
+                               Value="_selectedDiscountType"
+                               ValueChanged="DiscountTypeValueChanged"
                                FullWidth="true"
                                Margin="Margin.Dense"
                                Variant="Variant.Outlined">
@@ -25,7 +25,7 @@
                     </MudSelect>
                 </MudItem>
                 <MudItem sm="4" md="4" lg="4" Class="align-self-center">
-                    <MudTextField T="long" 
+                    <MudTextField T="long"
                                   Value="@_discount"
                                   ValueChanged="@(e => DiscountOrDeliveryFeesValueChanged(e, true))"
                                   Immediate="true"
@@ -112,13 +112,13 @@
         CalculateCreditDebit(PaidTotal);
         StateHasChanged();
     }
-    
+
     void DiscountTypeValueChanged(string value)
     {
         _selectedDiscountType = value;
         DiscountOrDeliveryFeesValueChanged(0, true);
     }
-    
+
     void DiscountOrDeliveryFeesValueChanged(long value, bool isDiscountField)
     {
         if (isDiscountField)
